--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,15 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 body {
   font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
+  background-color: #f7f7f7;
   margin: 0;
   padding: 0;
+}
+
+.header {
+  background-color: #4CAF50;
+  color: white;
+  text-align: center;
+  padding: 1rem;
 }
 
 .App {
@@ -84,6 +52,7 @@ h1 {
   background-color: #f9f9f9;
   border-radius: 5px;
 }
+
 .nearby-fields {
   margin-top: 20px;
 }
@@ -99,12 +68,11 @@ h1 {
   color: #000;
 }
 
-
 .carousel-item img {
-  max-width: 80%; /* La largeur maximale de l'image sera de 100% de la largeur du conteneur */
-  max-height: 200px; /* La hauteur maximale de l'image sera de 300 pixels */
-  margin: 0 auto; /* Centrez l'image horizontalement */
-  object-fit: cover; /* L'image sera redimensionnée tout en conservant son ratio d'aspect */
+  max-width: 80%;
+  max-height: 200px;
+  margin: 0 auto;
+  object-fit: cover;
 }
 
 .caption {
@@ -112,20 +80,16 @@ h1 {
   text-align: center;
   margin-top: 10px;
 }
-
-
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f7f7f7;
-  margin: 0;
-  padding: 0;
+.custom-map-container {
+  height: 300px; /* Définissez la hauteur souhaitée */
+  width: 100%; /* Utilisez toute la largeur disponible */
+  margin-bottom: 20px; /* Ajoutez un espacement en bas si nécessaire */
 }
-
-.header {
-  background-color: #4CAF50;
-  color: white;
-  text-align: center;
-  padding: 1rem;
+.map-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  pointer-events: none; /* Pour que les événements passent à travers la carte */
 }
-
-
