--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,10 @@ body {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #ffffff;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+  background-color: #000000; /* Couleur de fond légèrement différente */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Ombre plus subtile */
 }
+
 
 h1 {
   text-align: center;
@@ -62,18 +63,9 @@ h1 {
   margin: 0 auto;
 }
 
-.slick-prev,
-.slick-next {
-  font-size: 24px;
-  color: #000;
-}
 
-.carousel-item img {
-  max-width: 80%;
-  max-height: 200px;
-  margin: 0 auto;
-  object-fit: cover;
-}
+
+
 
 .caption {
   font-size: 14px;
@@ -92,4 +84,14 @@ h1 {
   height: 100%;
   width: 100%;
   pointer-events: none; /* Pour que les événements passent à travers la carte */
+}
+.centered-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.legend {
+  text-align: center;
 }
