--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,104 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Arial, sans-serif;
+  background-color: #bed6dd;
+  margin: 0;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.header {
+  background-color: #4CAF50;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+}
+.App {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fafafa; /* Couleur de fond légèrement différente */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Ombre plus subtile */
+}
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+  font-family: 'Arial Black', sans-serif;
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+.location-input {
+  margin-bottom: 1rem;
+}
+.field-link:hover {
+  background-color: #45a049;
+}
+.event-form {
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 5px;
+}
+.nearby-fields {
+  margin-top: 20px;
+}
+.slick-slider {
+  width: 80%;
+  margin: 0 auto;
+}
+.centered-container {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+  justify-content: center;
+  text-align: center;
+}
+.menu {
+  background-color: #bed6dd;
+  padding: 1rem;
+  text-align: center;
+}
+
+.menu-button {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px;
+  margin-right: 10px;
+  border-radius: 5px;
+  background-color: #457aa0;
+}
+
+.menu-button:hover {
+  background-color: rgb(211, 222, 233);
+}
+
+.notifications-container {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.notification-item {
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid rgba(221, 221, 221, 0.925);
+  border-radius: 5px;
+  background-color: #457ba0;
+}
+
+ul {
+  list-style-type: none; /* Enlève les puces de la liste */
+  padding: 0; /* Supprime le remplissage par défaut de la liste */
+}
+
+/* .map-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  pointer-events: none; 
+} */
+
