--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #bed6dd;
   margin: 0;
   padding: 0;
+  background-color: #dfeeef;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -18,15 +18,14 @@ code {
   padding: 1rem;
 }
 .App {
-  max-width: 800px;
+  max-width: 95%;
   margin: 0 auto;
-  padding: 20px;
-  background-color: #fafafa; /* Couleur de fond légèrement différente */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Ombre plus subtile */
+  background-color: #fafafa;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 h1 {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 60px;
   font-family: 'Arial Black', sans-serif;
   font-size: 2.5rem;
   margin-bottom: 1rem;
@@ -50,18 +49,21 @@ h1 {
   margin: 0 auto;
 }
 .centered-container {
-  /* display: flex;
-  flex-direction: column;
-  align-items: center; */
   justify-content: center;
   text-align: center;
 }
 .menu {
-  background-color: #bed6dd;
+  background: linear-gradient(to bottom right, rgb(171, 171, 231), rgb(149, 201, 149));
+  /* background: linear-gradient(to right, #3494e6, #ec6ead); */
   padding: 1rem;
   text-align: center;
+  color: #361a7d;
 }
 
+
+.menu-content {
+  overflow-y: auto;
+}
 .menu-button {
   color: #fff;
   text-decoration: none;
@@ -82,23 +84,196 @@ h1 {
 
 .notification-item {
   margin-bottom: 20px;
-  padding: 10px;
-  border: 1px solid rgba(221, 221, 221, 0.925);
-  border-radius: 5px;
-  background-color: #457ba0;
+  padding: 15px;
+  border: 1px solid rgba(97, 103, 153, 0.1);
+  border-radius: 10px;
+  background-color: rgba(69, 123, 160, 0.8);
+  opacity: 0.8;
+  transition: opacity 0.5s ease, transform 0.3s ease, box-shadow 0.3s ease; /* Ajout de transitions pour transform et box-shadow */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ajout d'une légère ombre */
 }
+
+.notification-item:hover {
+  opacity: 1;
+  transform: scale(1.02); /* Légère augmentation de la taille au survol */
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); /* Augmentation de l'ombre au survol */
+}
+
+
 
 ul {
-  list-style-type: none; /* Enlève les puces de la liste */
-  padding: 0; /* Supprime le remplissage par défaut de la liste */
+  list-style-type: none;
+  padding: 0;
 }
 
-/* .map-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
+
+.logo {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.menu-button {
+  
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  margin-right: 10px;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.5); 
+}
+
+.menu-button:hover {
+  background-color: rgb(211, 222, 233);
+}
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  margin: 5px;
+}
+
+.submit-button {
+  background-color: #4caf50; /* Vert */
+  color: white;
+}
+
+.locate-button {
+  background-color: #3498db; /* Bleu */
+  color: white;
+}
+
+.locating-button {
+  background-color: #e74c3c; /* Rouge */
+  color: white;
+  cursor: not-allowed;
+}
+.directions-button {
+  display: inline-block;
+  padding: 15px 30px;
+  font-size: 10px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 8px;
+  background-color: #c0d2af; 
+  color: white;
+  border: 2px solid #65b929; 
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.directions-button:hover {
+  background-color: #2980b9; /* Changement de couleur au survol */
+  color: white;
+}
+.filter-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.filter-container label {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.filter-container select,
+.filter-container input[type="time"] {
+  flex: 2;
+  padding: 8px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+.filter-container button {
+  flex: 1;
+  background-color: #3498db;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.filter-container button:hover {
+  background-color: #2980b9;
+  color: white;
+}
+.table-container {
+  max-width: 800px;
+  margin: 20px auto;
+}
+
+table {
   width: 100%;
-  pointer-events: none; 
-} */
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+
+thead {
+  background-color: #3498db;
+  color: white;
+}
+
+th, td {
+  padding: 12px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+tbody tr:hover {
+  background-color: #f5f5f5;
+}
+
+.link-style {
+  color: #3498db;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.directions-button {
+  background-color: #2ecc71;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.directions-button:hover {
+  background-color: #27ae60;
+}
+.input-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.input-container label {
+  margin-right: 10px;
+}
+
+.location-input {
+  padding: 8px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+.centered-input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
 
